내 정보 > 그린톡 > 친구초대 -- 작업 중

--- a/src/html/mypage/SCR_GA_CI_0601_M01.html
+++ b/src/html/mypage/SCR_GA_CI_0601_M01.html
@@ -13,7 +13,7 @@
             <section id="container">
                 <div class="contents">
                     <div class="point-history">
-                        <section>
+                        <section class="section">
                             <div class="point-summary">
                                 <h3 class="title">보유 포인트</h3>
                                 <div class="value">
@@ -38,7 +38,7 @@
                             </div>
                         </section>
                         <hr class="divider" />
-                        <section>
+                        <section class="section">
                             <div class="btn-tab">
                                 <div class="scroll-area">
                                     <button type="button" class="btn line xs active">전체</button>
