--- a/src/html/mypage/SCR_GA_CI_0602_M01_01.html
+++ b/src/html/mypage/SCR_GA_CI_0602_M01_01.html
@@ -13,7 +13,7 @@
             <section id="container">
                 <div class="contents">
                     <div class="point-history">
-                        <section>
+                        <section class="section">
                             <div class="point-summary">
                                 <h3 class="title">이달 소멸 예정 포인트</h3>
                                 <div class="value">
@@ -28,7 +28,7 @@
                             </ul>
                         </section>
                         <hr class="divider" />
-                        <section>
+                        <section class="section">
                             <div class="point-history-list">
                                 <div class="no-data">
                                     <p class="desc">표시할 내용이 없습니다</p>
