--- a/src/html/mypage/SCR_GA_CI_0801_P01.html
+++ b/src/html/mypage/SCR_GA_CI_0801_P01.html
@@ -6,7 +6,7 @@
 
     <div class="layer-body">
         <div class="edit-reply">
-            <section>
+            <section class="section">
                 <div class="car-info">
                     <div class="img"><img src="/images/contents/img_car_dummy01.png" alt="" /></div>
                     <div class="info">
@@ -35,7 +35,7 @@
                 </div>
             </section>
             <hr class="divider" />
-            <section>
+            <section class="section">
                 <h2 class="title-sm">이용 안내</h2>
                 <p>타임라인은 그린카 이용자들이 차량 이용 팁, 반납 주차 위치, 이용 후기 등을 공유하는 공간입니다. 다음 사항에 유의 바랍니다.</p>
                 <ul class="list sm">
