--- a/src/status.html
+++ b/src/status.html
@@ -1344,13 +1344,13 @@
                         <tr>
                             <td></td>
                             <td></td>
-                            <td>친구 초대</td>
+                            <td>친구초대</td>
                             <td></td>
                             <td></td>
-                            <td></td>
+                            <td>박지수</td>
                             <td>/mypage</td>
                             <td><a target="_blank" href="html/mypage/SCR_GA_CI_0901_M01.html">SCR_GA_CI_0901 _M01.html</a></td>
-                            <td class="stat"></td>
+                            <td class="stat">⚪</td>
                             <td class="compl"></td>
                             <td class="date"></td>
                             <td></td>
