--- a/src/status.html
+++ b/src/status.html
@@ -707,6 +707,60 @@
             </div>
         </div>
 
+		<div class="section" id="menu15" name="menu15">
+            <h2 class="title">스마트키</h2>
+            <div class="content">
+                <table>
+                    <thead>
+                        <tr>
+                            <th scope="col">2depth</th>
+                            <th scope="col">3depth</th>
+                            <th scope="col">4depth</th>
+                            <th scope="col">5depth</th>
+                            <th scope="col">6depth</th>
+                            <th scope="col">작업자</th>
+                            <th scope="col">path</th>
+                            <th scope="col">file</th>
+                            <th scope="col">stat</th>
+                            <th scope="col">완료일</th>
+							<th scope="col">수정일</th>
+                            <th scope="col">note</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>스마트키</td>
+                            <td>반납완료</td>
+                            <td>설문조사 (작성 전)</td>
+                            <td></td>
+                            <td></td>
+                            <td>이민우</td>
+                            <td>/ct</td>
+                            <td><a target="_blank" href="components/popup_module.html#ct#SCR_GA_CT_0602_P02#full">SCR_GA_CT_0602_P02.html</a></td>
+                            <td class="stat">⚪</td>
+                            <td class="compl"></td>
+                            <td class="date"></td>
+                            <td></td>
+                        </tr>
+						<tr>
+                            <td>스마트키</td>
+                            <td>반납완료</td>
+                            <td>설문조사 (작성 후)</td>
+                            <td></td>
+                            <td></td>
+                            <td>이민우</td>
+                            <td>/ct</td>
+							<td><a target="_blank" href="components/popup_module.html#ct#SCR_GA_CT_0602_P02_01#full">SCR_GA_CT_0602_P02_01.html</a></td>
+                            <td class="stat">⚪</td>
+                            <td class="compl"></td>
+                            <td class="date"></td>
+                            <td></td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+
         <div class="section" id="menu03" name="menu03">
             <h2 class="title">이용내역</h2>
             <div class="content">
@@ -748,7 +802,7 @@
                             <td>이용내역서</td>
                             <td></td>
                             <td></td>
-                            <td>박지수</td>
+                            <td>이민우</td>
                             <td>/history</td>
                             <td><a target="_blank" href="components/popup_module.html#history#SCR_GA_HS_0201_P01#full">SCR_GA_HS_0201_P01.html</a></td>
                             <td class="stat">⚪</td>
