이용내역서 코딩

--- a/src/html/ct/SCR_GA_CT_0602_P02.html
+++ b/src/html/ct/SCR_GA_CT_0602_P02.html
@@ -55,7 +55,7 @@
 			</div>
 
 			<div class="block">
-				<h3 class="title-sm">03. 그린카 이용 시 아쉬운 점에 대해 선택해주세요. (복수 선택 가능)</h3>
+				<h3 class="title-sm">03. 그린카 이용 시 아쉬운 점에 대해 선택해주세요. <span class="tip">(복수 선택 가능)</span></h3>
 				<div class="check-module grid-flex">
 					<div class="flex">
 						<label for="checkbox01" class="gc-checkbox">
@@ -105,7 +105,7 @@
 			</div>
 
 			<div class="block">
-				<h3 class="title-sm">04. 최근 그린카 이용 시 좋았던 점에 대해 선택해주세요. (복수 선택 가능)</h3>
+				<h3 class="title-sm">04. 최근 그린카 이용 시 좋았던 점에 대해 선택해주세요. <span class="tip">(복수 선택 가능)</span></h3>
 				<div class="check-module grid-flex">
 					<div class="flex">
 						<label for="checkbox11" class="gc-checkbox">
@@ -155,7 +155,7 @@
 			</div>
 
 			<div class="block">
-				<h3 class="title-sm">05. 그린카 사용목적이 무엇인가요? (복수 선택 가능)</h3>
+				<h3 class="title-sm">05. 그린카 사용목적이 무엇인가요? <span class="tip">(복수 선택 가능)</span></h3>
 				<div class="check-module grid-flex">
 					<div class="flex">
 						<label for="tmpCheckbook21" class="gc-checkbox">
