--- a/src/html/mypage/SCR_GA_CI_0401_P04.html
+++ b/src/html/mypage/SCR_GA_CI_0401_P04.html
@@ -8,7 +8,7 @@
 	</div>
 	
 	<div class="layer-body">
-		<div class="benefit">
+		<div class="benefit-info">
 			
 			<ul class="txt-list dot">
 				<li>
