쿠폰 수정 -- 쿠폰active추가, 혜택 상세영역 링크 추가

--- a/src/html/reservation/SCR_GA_RV_0206_T01.html
+++ b/src/html/reservation/SCR_GA_RV_0206_T01.html
@@ -6,10 +6,7 @@
     <body>
         <div id="wrap">
             <!-- header -->
-            @@include('@@webRoot/include/header.html', {
-                type: "sub_02",
-                title: "할인/적립"
-            })
+            @@include('@@webRoot/include/header.html', { type: "sub_02", title: "할인/적립" })
             <!-- //header -->
 
             <!-- container -->
@@ -25,31 +22,31 @@
                         </div>
                         <div class="cont coupon">
                             <section class="section">
-								<!-- 20220818 -->
+                                <!-- 20220818 -->
                                 <div class="section-cont">
-									<div class="ip-group unit">
-										<div class="row">
-											<input type="text" class="ip-txt" placeholder="쿠폰 번호 입력" />
-											<div class="line"></div>
+                                    <div class="ip-group unit">
+                                        <div class="row">
+                                            <input type="text" class="ip-txt" placeholder="쿠폰 번호 입력" />
+                                            <div class="line"></div>
                                         </div>
-										<button class="btn md"><span class="text">쿠폰등록</span></button>
+                                        <button class="btn md"><span class="text">조회</span></button>
                                     </div>
                                 </div>
-								<!-- //20220818 -->
+                                <!-- //20220818 -->
                             </section>
                             <hr class="divider" />
                             <section class="section">
                                 <div class="section-title">
                                     <h3>사용 가능한 쿠폰<span class="badge-num">5</span></h3>
-									<!-- 20220819 -->
+                                    <!-- 20220819 -->
                                     <div class="filter">
-										<a href="#" class="ctr">혜택순 <i class="ico arrow-bot-nav060 lg"></i></a>
+                                        <a href="#" class="ctr">혜택순 <i class="ico arrow-bot-nav060 lg"></i></a>
                                     </div>
-									<!-- //20220819 -->
+                                    <!-- //20220819 -->
                                 </div>
                                 <div class="section-cont">
                                     <div class="coupon-list">
-                                        <div class="coupon-item">
+                                        <div class="coupon-item active">
                                             <div class="discount-type">비율할인</div>
                                             <div class="discount-value">
                                                 <span>50% 할인</span>
@@ -58,7 +55,7 @@
                                             <p>[매일] 월화수목금토일 언제나 50% 할인</p>
                                             <div class="effective-date">
                                                 <span class="date">2022.04.01 ~ 2022.04.30</span>
-                                                <span class="badge warning sm">D-7</span>
+                                                <span class="badge pink sm">D-7</span>
                                             </div>
                                         </div>
                                         <div class="coupon-item">
@@ -70,7 +67,7 @@
                                             <p>금연 서약한 당신을 위해!</p>
                                             <div class="effective-date">
                                                 <span class="date">2022.04.01 ~ 2022.04.30</span>
-                                                <span class="badge normal sm">D-35</span>
+                                                <span class="badge green sm">D-35</span>
                                             </div>
                                         </div>
                                         <div class="coupon-item expired">
@@ -82,7 +79,7 @@
                                             <p>[매일] 월화수목금토일 언제나 50% 할인</p>
                                             <div class="effective-date">
                                                 <span class="date">2022.04.01 ~ 2022.04.30</span>
-                                                <span class="badge warning sm">D-7</span>
+                                                <span class="badge pink sm">D-7</span>
                                             </div>
                                         </div>
                                         <div class="coupon-item expired">
@@ -94,7 +91,7 @@
                                             <p>[매일] 월화수목금토일 언제나 50% 할인</p>
                                             <div class="effective-date">
                                                 <span class="date">2022.04.01 ~ 2022.04.30</span>
-                                                <span class="badge normal sm">D-365</span>
+                                                <span class="badge green sm">D-365</span>
                                             </div>
                                         </div>
                                     </div>
