--- a/src/status.html
+++ b/src/status.html
@@ -475,7 +475,7 @@
                             <td><a target="_blank" href="html/reservation/SCR_GA_RV_0206_T01.html">SCR_GA_RV_0206_T01.html</a></td>
                             <td class="stat">⚫</td>
                             <td class="compl">07-18</td>
-                            <td class="date">20220818<br>20220819</td>
+                            <td class="date">20220818<br>20220819<br>20220823</td>
                             <td></td>
                         </tr>
                         <tr>
@@ -931,7 +931,7 @@
                             <td><a target="_blank" href="html/benefit/SCR_GA_BN_0201_M01.html">SCR_GA_BN_0201_M01.html</a></td>
                             <td class="stat">⚫</td>
                             <td class="compl"></td>
-                            <td class="date"></td>
+                            <td class="date">20220823</td>
                             <td></td>
                         </tr>
                         <tr>
