--- a/src/status.html
+++ b/src/status.html
@@ -263,6 +263,7 @@
             <a href="components/input.html" target="_blank">Input</a>
             <a href="components/form.html" target="_blank">Form</a>
             <a href="components/tab.html" target="_blank">Tab</a>
+            <a href="components/table.html" target="_blank">Table</a>
             <a href="components/etc.html" target="_blank">ETC</a>
             <a href="components/layout01.html" target="_blank">layout01</a>
 
