혜택 수정사항

--- a/src/html/mypage/SCR_GA_CI_0401_M01.html
+++ b/src/html/mypage/SCR_GA_CI_0401_M01.html
@@ -125,52 +125,58 @@
 
 								<div class="coupon-list">
 									<div class="coupon-item">
-										<div class="discount-type">비율할인</div>
-										<div class="discount-value">
-											<span>50% 할인</span>
-										</div>
-										<div class="discount-desc">
-											<p>[매일]월화수목금토일 언제나 50% 할인</p>
-											<p> 주중 주말 할인/1시간/차종 제한/지역제한</p>
-										</div>
-										<div class="effective-date">
-											<span class="date">2022.04.01 ~ 2022.04.30</span>
-											<span class="badge pink sm">D-7</span>
-										</div>
+										<a href="#" class="coupon-desc">
+											<div class="discount-type">비율할인</div>
+											<div class="discount-value">
+												<span>50% 할인</span>
+											</div>
+											<div class="discount-desc">
+												<p>[매일]월화수목금토일 언제나 50% 할인</p>
+												<p> 주중 주말 할인/1시간/차종 제한/지역제한</p>
+											</div>
+											<div class="effective-date">
+												<span class="date">2022.04.01 ~ 2022.04.30</span>
+												<span class="badge pink sm">D-7</span>
+											</div>
+										</a>
 										<button class="btn icon md">
 											<i class="ico download lg"></i>
 										</button>
 									</div>
 									<div class="coupon-item expired">
-										<div class="discount-type">정액할인</div>
-										<div class="discount-value">
-											<span>2,000원 할인</span>
+										<a href="#" class="coupon-desc">
+											<div class="discount-type">정액할인</div>
+											<div class="discount-value">
+												<span>2,000원 할인</span>
+											</div>
+											<div class="discount-desc">
+												<p>금연 서약한 당신을 위해</p>
+												<p> 주중 주말 할인/1시간/차종 제한/지역제한</p>
 										</div>
-										<div class="discount-desc">
-											<p>금연 서약한 당신을 위해</p>
-											<p> 주중 주말 할인/1시간/차종 제한/지역제한</p>
-										</div>
-										<div class="effective-date">
-											<span class="date">2022.04.01 ~ 2022.04.30</span>
-											<span class="badge green sm">D-35</span>
-										</div>
+											<div class="effective-date">
+												<span class="date">2022.04.01 ~ 2022.04.30</span>
+												<span class="badge green sm">D-35</span>
+											</div>
+										</a>
 										<button class="btn icon md">
-											<i class="ico second-check xl"></i>
+											<i class="ico download lg"></i>
 										</button>
 									</div>
 									<div class="coupon-item">
-										<div class="discount-type">시간무료</div>
-										<div class="discount-value">
-											<span>3시간 무료</span>
+										<a href="#" class="coupon-desc">
+											<div class="discount-type">시간무료</div>
+											<div class="discount-value">
+												<span>3시간 무료</span>
+											</div>
+											<div class="discount-desc">
+												<p>스파클링 3시간 드라이브!</p>
+												<p> 주중 주말 할인/1시간/차종 제한/지역제한</p>
 										</div>
-										<div class="discount-desc">
-											<p>스파클링 3시간 드라이브!</p>
-											<p> 주중 주말 할인/1시간/차종 제한/지역제한</p>
-										</div>
-										<div class="effective-date">
-											<span class="date">2022.04.01 ~ 2022.04.30</span>
-											<span class="badge green sm">D-7</span>
-										</div>
+											<div class="effective-date">
+												<span class="date">2022.04.01 ~ 2022.04.30</span>
+												<span class="badge pink sm">D-7</span>
+											</div>
+										</a>
 										<button class="btn icon md">
 											<i class="ico download lg"></i>
 										</button>
