--- a/src/html/reservation/SCR_GA_RV_0206_T01.html
+++ b/src/html/reservation/SCR_GA_RV_0206_T01.html
@@ -45,56 +45,66 @@
                                     <!-- //20220819 -->
                                 </div>
                                 <div class="section-cont">
+									<!-- 20220823 -->
                                     <div class="coupon-list">
                                         <div class="coupon-item active">
-                                            <div class="discount-type">비율할인</div>
-                                            <div class="discount-value">
-                                                <span>50% 할인</span>
-                                                <span>-6,865원</span>
-                                            </div>
-                                            <p>[매일] 월화수목금토일 언제나 50% 할인</p>
-                                            <div class="effective-date">
-                                                <span class="date">2022.04.01 ~ 2022.04.30</span>
-                                                <span class="badge pink sm">D-7</span>
-                                            </div>
+											<a href="#">
+												<div class="discount-type">비율할인</div>
+												<div class="discount-value">
+													<span>50% 할인</span>
+													<span>-6,865원</span>
+												</div>
+												<p>[매일] 월화수목금토일 언제나 50% 할인</p>
+												<div class="effective-date">
+													<span class="date">2022.04.01 ~ 2022.04.30</span>
+													<span class="badge pink sm">D-7</span>
+												</div>
+											</a>
                                         </div>
                                         <div class="coupon-item">
-                                            <div class="discount-type">정액할인</div>
-                                            <div class="discount-value">
-                                                <span>2,000원 할인</span>
-                                                <span>-2,000원</span>
-                                            </div>
-                                            <p>금연 서약한 당신을 위해!</p>
-                                            <div class="effective-date">
-                                                <span class="date">2022.04.01 ~ 2022.04.30</span>
-                                                <span class="badge green sm">D-35</span>
-                                            </div>
+											<a href="#">
+												<div class="discount-type">정액할인</div>
+												<div class="discount-value">
+													<span>2,000원 할인</span>
+													<span>-2,000원</span>
+												</div>
+												<p>금연 서약한 당신을 위해!</p>
+												<div class="effective-date">
+													<span class="date">2022.04.01 ~ 2022.04.30</span>
+													<span class="badge green sm">D-35</span>
+												</div>
+											</a>
                                         </div>
                                         <div class="coupon-item expired">
-                                            <div class="discount-type">비율할인</div>
-                                            <div class="discount-value">
-                                                <span>50% 할인</span>
-                                                <span>-6,865원</span>
-                                            </div>
-                                            <p>[매일] 월화수목금토일 언제나 50% 할인</p>
-                                            <div class="effective-date">
-                                                <span class="date">2022.04.01 ~ 2022.04.30</span>
-                                                <span class="badge pink sm">D-7</span>
-                                            </div>
+											<a href="#">
+												<div class="discount-type">비율할인</div>
+												<div class="discount-value">
+													<span>50% 할인</span>
+													<span>-6,865원</span>
+												</div>
+												<p>[매일] 월화수목금토일 언제나 50% 할인</p>
+												<div class="effective-date">
+													<span class="date">2022.04.01 ~ 2022.04.30</span>
+													<span class="badge pink sm">D-7</span>
+												</div>
+											</a>
                                         </div>
                                         <div class="coupon-item expired">
-                                            <div class="discount-type">비율할인</div>
-                                            <div class="discount-value">
-                                                <span>50% 할인</span>
-                                                <span>-6,865원</span>
-                                            </div>
-                                            <p>[매일] 월화수목금토일 언제나 50% 할인</p>
-                                            <div class="effective-date">
-                                                <span class="date">2022.04.01 ~ 2022.04.30</span>
-                                                <span class="badge green sm">D-365</span>
-                                            </div>
+											<a href="#">
+												<div class="discount-type">비율할인</div>
+												<div class="discount-value">
+													<span>50% 할인</span>
+													<span>-6,865원</span>
+												</div>
+												<p>[매일] 월화수목금토일 언제나 50% 할인</p>
+												<div class="effective-date">
+													<span class="date">2022.04.01 ~ 2022.04.30</span>
+													<span class="badge green sm">D-365</span>
+												</div>
+											</a>
                                         </div>
                                     </div>
+									<!-- //20220823 -->
                                 </div>
                                 <!-- <button class="btn-filter">
                                     <i class="ico filter md"></i>
