토스트 팝업

--- a/src/html/benefit/SCR_GA_BN_0302_M01.html
+++ b/src/html/benefit/SCR_GA_BN_0302_M01.html
@@ -58,7 +58,8 @@
                         </div>
                     </div>
 
-					<div class="toast-pop center">
+					<!-- 20220823 -->
+					<div class="toast-pop active">
 						<div class="toast-container">
 							<div class="module">
 								<p class="message">
@@ -67,6 +68,7 @@
 							</div>
 						</div>
 					</div>
+					<!-- //20220823 -->
 
                 </div>
                 @@include('@@webRoot/include/bot_fix.html', {type: "type01", title:"인증하기", disabled:"false"})
