--- a/src/html/reservation/SCR_GA_RV_0201_M01.html
+++ b/src/html/reservation/SCR_GA_RV_0201_M01.html
@@ -31,7 +31,9 @@
 												<span class="tag tag-car plus">Plus</span>
 												<span class="tag tag-car new">신차</span>
 											</div>
-											<p class="ev">[Greencar Plus]</p> 
+											<!-- 20220823 -->
+											<p class="ev">Greencar Plus+</p> 
+											<!-- //20220823 -->
 											<strong>145허4454</strong>
 											<span class="name">셀토스 1.6</span>
 											<span class="option">디젤 <em>170원/km</em></span>
