--- a/src/status.html
+++ b/src/status.html
@@ -364,7 +364,10 @@
                             <td><a target="_blank" href="html/reservation/SCR_GA_RV_0201_M01.html">SCR_GA_RV_0201_M01.html</a></td>
                             <td class="stat">⚫</td>
                             <td class="compl">07-08</td>
-                            <td class="date">20220818</td>
+                            <td class="date">
+								20220818<br>
+								20220823
+							</td>
                             <td></td>
                         </tr>
                         <tr>
@@ -1044,7 +1047,9 @@
                             <td><a target="_blank" href="html/benefit/SCR_GA_BN_0302_M01.html">SCR_GA_BN_0302_M01.html</a></td>
                             <td class="stat">⚪</td>
                             <td class="compl"></td>
-                            <td class="date"></td>
+                            <td class="date">
+								20220823
+							</td>
                             <td></td>
                         </tr>
                         <tr>
